showcase area updated

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </ul>
         </div>
       </nav>
-      <div class="showcase"></div>
+      <div class="showcase"><img src="./imgs/showcase.webp" alt=""></div>
       <div class="suv-model">
         <div class="model-head">
           <h2>Our SUVs</h2>
